tests/ui/consts/question-mark-returning-from-initializer.stderr
error[E0807]: the `?` operator cannot be used to return from a `const` initializer
  --> $DIR/question-mark-returning-from-initializer.rs:10:24
   |
LL |     const A: () = foo()?;
   |                        ^

error[E0807]: the `?` operator cannot be used to return from a `static` initializer
  --> $DIR/question-mark-returning-from-initializer.rs:11:25
   |
LL |     static B: () = foo()?;
   |                         ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0807`.
